# WideSearch

./: .gitignore  LICENSE  Makefile  README.md  prepare-env.sh  pyproject.toml  requirements.txt
scripts/: run_infer_and_eval_batching.py
src/agent/: agent.py  memory.py  multi_agent_tools.py  prompt.py  run.py  tools.py
src/evaluation/: data_loader.py  evaluation.py  metric_utils.py
src/utils/: config.py  llm.py
